--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "elementary-automata",
   "version": "0.1.0",
+  "homepage": "https://jdseiler.github.io/automata-explorer",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -24,7 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b trunk -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
